# ARC

./: .gitignore  Block_Diagram.eps  Block_Diagram_1_.eps  Procedure  README.md  checked_out_hardware.txt  parts_list.md  parts_list.xlsx
AutoRally/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
AutoRally/devel/include/autorally_control/: gpsWaypoint_paramsConfig.h
AutoRally/devel/include/autorally_core/: camera_auto_balance_paramsConfig.h  camera_trigger_paramsConfig.h
AutoRally/devel/include/autorally_msgs/: chassisCommand.h  chassisState.h  imageMask.h  line2D.h  point2D.h  runstop.h  waypoints.h  wheelSpeeds.h
AutoRally/devel/include/imu_3dm_gx4/: FilterOutput.h
AutoRally/devel/lib/autorally_control/: gpsWaypoint  joystickController
AutoRally/devel/lib/autorally_core/: WheelOdometry  gpsHemisphereInterface  imuGpsEstimator  ocs  runStop  xbeeCoordinator  xbeeNode
AutoRally/devel/lib/autorally_smartdriving/: lidarDetection
AutoRally/devel/lib/imu_3dm_gx4/: imu_3dm_gx4
AutoRally/devel/lib/pkgconfig/: autorally_control.pc  autorally_core.pc  autorally_description.pc  autorally_gazebo.pc  autorally_msgs.pc  autorally_smartdriving.pc  autorally_util.pc  imu_3dm_gx4.pc
AutoRally/devel/share/autorally_control/cmake/: autorally_controlConfig.cmake
AutoRally/devel/share/autorally_control/docs/: gpsWaypoint_paramsConfig-usage.dox  gpsWaypoint_paramsConfig.dox  gpsWaypoint_paramsConfig.wikidoc
AutoRally/devel/share/autorally_core/cmake/: autorally_coreConfig.cmake
AutoRally/devel/share/autorally_core/docs/: camera_auto_balance_paramsConfig-usage.dox  camera_auto_balance_paramsConfig.dox  camera_auto_balance_paramsConfig.wikidoc  camera_trigger_paramsConfig-usage.dox  camera_trigger_paramsConfig.dox  camera_trigger_paramsConfig.wikidoc
AutoRally/devel/share/autorally_description/cmake/: autorally_descriptionConfig.cmake
AutoRally/devel/share/autorally_gazebo/cmake/: autorally_gazeboConfig.cmake
AutoRally/devel/share/autorally_msgs/cmake/: autorally_msgs-msg-paths.cmake  autorally_msgsConfig.cmake
AutoRally/devel/share/autorally_smartdriving/cmake/: autorally_smartdrivingConfig.cmake
AutoRally/devel/share/autorally_util/cmake/: autorally_utilConfig.cmake
AutoRally/devel/share/imu_3dm_gx4/cmake/: imu_3dm_gx4-msg-extras.cmake  imu_3dm_gx4-msg-paths.cmake  imu_3dm_gx4Config.cmake
AutoRally/src/autorally/.git_original/: config  index  packed-refs
AutoRally/src/autorally/autorally/: package.xml
AutoRally/src/autorally/autorally_control/launch/: waypoints_go_around  waypoints~
AutoRally/src/autorally/autorally_description/urdf/: autoRallyPlatform.urdf.xacro  autoRallyPlatform.urdf.xacro~
AutoRally/src/autorally/autorally_gazebo/launch/: autoRallyTrackGazeboSim.launch  autoRallyTrackWorld.launch
AutoRally/src/autorally/autorally_msgs/: CMakeLists.txt
AutoRally/src/autorally/autorally_smartdriving/: CMakeLists.txt  package.xml~
AutoRally/src/autorally/autorally_smartdriving/launch/: autorally_configuration.launch
AutoRally/src/autorally/autorally_smartdriving/src/lidarDetection/: lidarDetection.cpp  lidarDetection.cpp~  lidarDetection.h  lidarDetection.h~
AutoRally/src/imu_3dm_gx4/: .gitignore_original
AutoRally/src/imu_3dm_gx4/.git_original/: config  index  packed-refs
AutoRally/src/imu_3dm_gx4/src/: imu.cpp  imu.hpp  imu_3dm_gx4.cpp
CAD/: back-post-traxxas.SLDPRT
Logs/: Log_Tao.txt
arc_autorally/: Installation Steps  auto-rally-startup.txt  autoRallyPlatform.urdf.xacro  run_autorally.sh  start_autorally.sh
arc_autorally/autorally_scripts/: run_autorally.sh  start_autorally.sh
arc_autorally/autorally_smartdriving/: CMakeLists.txt  package.xml
arc_autorally/autorally_smartdriving/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
arc_autorally/autorally_smartdriving/launch/: auto_turn.launch  autorally_configuration.launch  move_base.launch  slam.launch  test_map_empty.yaml
arc_autorally/autorally_smartdriving/src/Drive/: CMakeLists.txt  drive.cpp  drive.h
arc_autorally/autorally_smartdriving/src/Global_Path/: CMakeLists.txt  global_plan.cpp  global_plan.h
arc_autorally/autorally_smartdriving/src/Odom/: CMakeLists.txt  odom.cpp  odom.h
arc_autorally/autorally_smartdriving/src/imu/: CMakeLists.txt  imuConverter.cpp  imuConverter.h
arc_autorally/autorally_smartdriving/src/leddarDetection/: lidarDetection.h
arc_autorally/autorally_smartdriving/src/lidarDetection/: CMakeLists.txt  lidarDetection.cpp
arc_autorally/autorally_smartdriving/src/tf_nav/: CMakeLists.txt  tf_nav.cpp  tf_nav.h
arc_autorally/world/: CustomWorld.sdf  CustomWorld_Empty.sdf  CustomWorld_Square.sdf  model.config
arc_stage/stage_launch/: CMakeLists.txt  arc_stage.launch  package.xml  robot_localization.launch
arc_stage/stage_launch/maps/: empty_world.yaml  maze.yaml
arc_stage/stage_launch/stage/: arc_robot.inc  block.inc  empty.world  rviz_navigation.rviz  stage.rviz
design_document/: arc_design_document.tex  commit.txt  makefile  revisions.tex
final/: README.md  changes_template.tex  design_changes.tex  final_report.tex  gantt_chart.tex  tech_changes.tex
final-2/final/: Anatomy.txt  final_report.tex  gantt_chart.tex
gantt/: gantt_chart.tex  gantt_template.tex  pgfgantt.sty
problem_statement/: mybib.bib  problem_statement.tex  revisions.tex
progress_report/: .~lock.Progress_Report.pptx#  Block_Diagram.eps  Progress_Report.pptx  prog_document.tex
requirement_results/: makefile  srs_results.tex
srs_document/: Block_Diagram.eps  arc_srs_template.tex  gantt_chart.tex  makefile  revisions.tex  srs.bib  srs_document.tex
srs_template/: arc_srs_template.tex  gantt_chart.tex  makefile
team44_prog_report_sp17/draft_of_findings/: makefile  mybib.bib
tech_review/: makefile  revisions.tex  tech_review.aux  tech_review.dvi  tech_review.out  tech_review.ps  tech_review.tex  tech_review.toc
tex_example/: makefile  writing_template.tex
winter_prog/: Winter_Progress_Report.pptx  makefile  prog_document.tex
write_up/: write_up.tex
(+38 files in other folders)
