<?xml version="1.0"?>
<package>
  <name>stage_launch</name>
  <version>0.0.0</version>
  <description>The stage_launch package</description>

  <maintainer email="chentao@oregonstate.edu">arc</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>stage_ros</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>teb_local_planner</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
